--- a/manifest.json
+++ b/manifest.json
@@ -5,9 +5,8 @@
 
     "description": "A better firefox extension for Pinboard (http://pinboard.in).",
     "icons": {
-        "16": "/img/appicon_16.png",
-        "48": "/img/appicon_48.png",
-        "128": "/img/appicon_128.png"
+        "48": "/img/appicon-48.png",
+        "96": "/img/appicon-96.png"
     },
 
     "applications": {
@@ -36,13 +35,13 @@
 
     "browser_action": {
          "default_title": "Pinboard+",
-         "default_icon": "/img/icon_grey_19.png",
-         "default_popup": "/html/popup.html",
-         "icons": [
-             "/img/icon_grey_19.png",
-             "/img/icon_colored_19.png",
-             "/img/icon_grey_saving_19.png"
-         ]
+         "default_icon": {
+            "18": "/img/icon-gray-18.png",
+            "32": "/img/icon-gray-32.png",
+            "36": "/img/icon-gray-36.png",
+            "64": "/img/icon-gray-64.png"
+        },
+         "default_popup": "/html/popup.html"
     },
 
     "options_ui": {
