--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
     },
 
     "permissions": [
-        "stroage",
+        "storage",
         "tabs",
         "http://*/*",
         "https://*/*"
