Added keyboard shortcut Alt+P

--- a/manifest.json
+++ b/manifest.json
@@ -40,5 +40,12 @@
     "options_ui": {
         "page": "html/options.html",
         "open_in_tab": true
+    },
+    "commands": {
+        "_execute_browser_action": {
+            "suggested_key": {
+                "default": "Alt+P"
+            }
+        }
     }
 }
