--- a/manifest.json
+++ b/manifest.json
@@ -26,6 +26,14 @@
             "js/background.js"
         ]
     },
+    "content_scripts": [
+        {
+            "matches": ["http://*/*", "https://*/*"],
+            "run_at": "document_start",
+            "js": ["js/description.js"],
+            "all_frames": true
+        }
+    ],
     "browser_action": {
         "browser_style": true,
         "default_title": "Pinboard+",
